--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1"
+  },
+  "dependencies": {
+    "g": "^2.0.1",
+    "live-server": "^1.2.1"
   }
 }
